apps/services/authentik/authentik-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.4.2
    helm.sh/chart: authentik-2024.4.2
  name: authentik-server
  namespace: authentik
spec:
  ingressClassName: traefik
  rules:
  - host: authentik.vulf.haus
    http:
      paths:
      - backend:
          service:
            name: authentik-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: cm-shared-wildcard-vulfhaus-tls
